--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,11 @@
       }
       body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-        padding: 40px;
-        max-width: 1200px;
-        margin: 0 auto;
-        background: #f5f5f5;
-        overflow-y: visible !important;
-        overflow-x: hidden !important;
-        height: auto !important;
-        min-height: 100vh;
+        margin: 0;
+        padding: 0;
+        background: #ffffff;
+        overflow: hidden !important;
+        height: 100vh;
         position: relative !important;
       }
       /* Override Ionic's overflow settings */
@@ -54,113 +51,12 @@
         scrollbar-width: thin;
         scrollbar-color: #888 #f1f1f1;
       }
-      .section {
-        background: white;
-        padding: 30px;
-        border-radius: 8px;
-        margin-bottom: 30px;
-        box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      }
-      .button-group {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 16px;
-        align-items: center;
-        margin-bottom: 20px;
-      }
-      h1 {
-        color: #333;
-        margin-bottom: 10px;
-      }
-      h2 {
-        color: #666;
-        margin-top: 40px;
-        margin-bottom: 20px;
-        font-size: 24px;
-      }
     </style>
 
     <script type="module" src="/build/design-system.esm.js"></script>
     <script nomodule src="/build/design-system.js"></script>
   </head>
   <body>
-    <h1>Design System - Ionic Components</h1>
-    <p>This page demonstrates the r-button component that wraps Ionic's button.</p>
-
-    <div class="section">
-      <h2>Basic Buttons</h2>
-      <div class="button-group">
-        <r-button>Default</r-button>
-        <r-button color="primary">Primary</r-button>
-        <r-button color="secondary">Secondary</r-button>
-        <r-button color="tertiary">Tertiary</r-button>
-        <r-button color="success">Success</r-button>
-        <r-button color="warning">Warning</r-button>
-        <r-button color="danger">Danger</r-button>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>Fill Styles</h2>
-      <div class="button-group">
-        <r-button fill="solid" color="primary">Solid</r-button>
-        <r-button fill="outline" color="primary">Outline</r-button>
-        <r-button fill="clear" color="primary">Clear</r-button>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>Button Sizes</h2>
-      <div class="button-group">
-        <r-button size="small" color="primary">Small</r-button>
-        <r-button size="default" color="primary">Default</r-button>
-        <r-button size="large" color="primary">Large</r-button>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>Buttons with Icons</h2>
-      <div class="button-group">
-        <r-button icon="home" color="primary">Home</r-button>
-        <r-button icon="heart" icon-position="end" color="danger">Like</r-button>
-        <r-button icon="star" color="warning">Favorite</r-button>
-        <r-button icon="settings" fill="outline">Settings</r-button>
-        <r-button icon="add-circle" icon-only color="primary"></r-button>
-        <r-button icon="trash" icon-only color="danger"></r-button>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>Full Width Buttons</h2>
-      <div style="max-width: 400px;">
-        <r-button expand="full" color="primary">Full Width</r-button>
-        <r-button expand="block" color="secondary" style="margin-top: 10px;">Block</r-button>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>Disabled Buttons</h2>
-      <div class="button-group">
-        <r-button disabled color="primary">Disabled</r-button>
-        <r-button disabled fill="outline" color="primary">Disabled Outline</r-button>
-      </div>
-    </div>
-
-    <div class="section">
-      <h2>Interactive Example</h2>
-      <p>Click the button below to see the click event:</p>
-      <r-button id="interactive-btn" color="primary">Click me!</r-button>
-      <p id="click-message" style="margin-top: 16px; color: #666;"></p>
-    </div>
-
-    <script>
-      const button = document.getElementById('interactive-btn');
-      const message = document.getElementById('click-message');
-      
-      button.addEventListener('rClick', (e) => {
-        message.textContent = `Button clicked at ${new Date().toLocaleTimeString()}!`;
-        message.style.color = '#007bff';
-      });
-    </script>
+    <app-shell></app-shell>
   </body>
 </html>
