Update titles and welcome messages to reflect the new branding as "Refactico"; adjust sidebar toggle position for improved layout.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <title>Design System - Ionic Components</title>
+    <title>Refactico - Design System</title>
     
     <!-- Ionic CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@latest/css/ionic.bundle.css" />
