--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,8 @@
       }
     </style>
 
-    <script type="module" src="/build/design-system.esm.js"></script>
-    <script nomodule src="/build/design-system.js"></script>
+    <script type="module" src="/build/refactico.esm.js"></script>
+    <script nomodule src="/build/refactico.js"></script>
   </head>
   <body>
     <app-shell></app-shell>
