Update theme bundling and Storybook configuration
- Updated `custom-elements.json` timestamp for metadata.
- Added a new script `bundle:theme` in `package.json` to bundle theme CSS into a single file.
- Created `scripts/bundle-theme.css.ts` to resolve and bundle theme CSS imports.
- Imported the bundled theme CSS in Storybook's preview configuration.
- Modified `preview-head.html` to include styling for documentation layout.
- Adjusted button story components to remove unnecessary children props for cleaner rendering.

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,2 +1,8 @@
 <!-- .storybook/preview-head.html -->
 <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@8/css/ionic.bundle.css" /> -->
+<style>
+    .sbdocs-wrapper {
+        overflow: auto;
+        height: 1px;
+    }
+</style>
